contact_page + footer managed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BOSR club</title>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -59,6 +60,19 @@
     <section id="Contact_us">
         <h2>Contact_us</h2>
 
+        <div class="social_medias">
+            <h2>Find us on</h2>
+            <!-- Add font awesome icons -->
+            <a href="https://www.facebook.com/Birendra-Open-Source-Club-101392208766217" target="_blank" class=" fa
+                fa-facebook"></a>
+            <a href="https://bosrclub.github.io/bosr/" target="_blank" class="fa fa-google"></a>
+            <a href="https://www.youtube.com/channel/UCiOQt8xTyFvFW2_Z0B_1Rcg" target="_blank"
+                class="fa fa-youtube"></a>
+        </div>
+        <footer>
+            <!-- footer shall be used to give credit to the contribuutors -->
+            <h4>Created by contributors of BOSC | ©-2020 All rights reserved</h4>
+        </footer>
 </body>
 
 </html>
